# pysilo

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
conda/: meta.yaml
pysilo/: __init__.py  download_silo.py  grid.py  paths.py  silo.py  store.py
silo/: __init__.py  download_silo.py  paths.py  store.py
