[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysilo"
version = "0.1.0"
description = "Cached SILO daily climate for Australia — fetch once per grid point, never twice"
readme = "README.md"
authors = [
  { name = "Borevitz Lab, Australian National University" },
  { name = "Yasar Adeel Ansari", email = "u6737670@anu.edu.au" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
  "silo",
  "climate",
  "australia",
  "weather",
  "agriculture",
  "time-series",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "attrs",
  "borevitz-lab",
  "pandas",
  "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/thestochasticman/silo"
Repository = "https://github.com/thestochasticman/silo"
Issues = "https://github.com/thestochasticman/silo/issues"

[tool.setuptools.packages.find]
include = ["pysilo", "pysilo.*"]
